--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,12 @@ body {
 }
 
 a {
-  color: #e43c5c;
+  color: #1563b1;
   text-decoration: none;
 }
 
 a:hover {
-  color: #ea6981;
+  color: #8c8c8c;
   text-decoration: none;
 }
 
@@ -43,7 +43,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #e43c5c;
+  background: #1563b1;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -57,7 +57,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #e9607a;
+  background: #8c8c8c;
   color: #fff;
 }
 
@@ -155,7 +155,7 @@ h6 {
   height: 2px;
   bottom: -6px;
   left: 0;
-  background-color: #e43c5c;
+  background-color: #1563b1;
   visibility: hidden;
   transform: scaleX(0);
   transition: all 0.3s ease-in-out 0s;
@@ -208,7 +208,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover > a {
-  color: #e43c5c;
+  color: #1563b1;
 }
 
 .navbar .dropdown:hover > ul {
@@ -310,7 +310,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover > a {
-  color: #e43c5c;
+  color: #1563b1;
 }
 
 .navbar-mobile .getstarted {
@@ -344,7 +344,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover > a {
-  color: #e43c5c;
+  color: #1563b1;
 }
 
 .navbar-mobile .dropdown > .dropdown-active {
@@ -425,8 +425,8 @@ h6 {
 }
 
 #hero .btn-get-started:hover {
-  background: #e43c5c;
-  border: 2px solid #e43c5c;
+  background: #1563b1;
+  border: 2px solid #1563b1;
 }
 
 @media (min-width: 1024px) {
@@ -480,8 +480,8 @@ section {
   padding: 8px 20px;
   line-height: 1;
   margin: 0;
-  background: #fdeff2;
-  color: #e43c5c;
+  background: #d0e2fe;
+  color: #1563b1;
   display: inline-block;
   text-transform: uppercase;
   border-radius: 50px;
@@ -494,7 +494,7 @@ section {
 }
 
 .section-title h3 span {
-  color: #e43c5c;
+  color: #1563b1;
 }
 
 .section-title p {
@@ -535,7 +535,7 @@ section {
   left: 0;
   top: 2px;
   font-size: 20px;
-  color: #e43c5c;
+  color: #1563b1;
   line-height: 1;
 }
 
@@ -553,15 +553,15 @@ section {
   border-radius: 50px;
   transition: 0.3s;
   line-height: 1;
-  color: #e43c5c;
+  color: #1563b1;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
   margin-top: 6px;
-  border: 2px solid #e43c5c;
+  border: 2px solid #1563b1;
 }
 
 .about .content .btn-learn-more:hover {
-  background: #e43c5c;
+  background: #1563b1;
   color: #fff;
   text-decoration: none;
 }
@@ -588,7 +588,7 @@ section {
 .services .icon-box::before {
   content: "";
   position: absolute;
-  background: #fdeff2;
+  background: #d0e2fe;
   right: 0;
   left: 0;
   bottom: 0;
@@ -598,7 +598,7 @@ section {
 }
 
 .services .icon-box:hover::before {
-  background: #e43c5c;
+  background: #1563b1;
   top: 0;
   border-radius: 0px;
 }
@@ -610,7 +610,7 @@ section {
 .services .icon i {
   font-size: 48px;
   line-height: 1;
-  color: #e43c5c;
+  color: #1563b1;
   transition: all 0.3s ease-in-out;
 }
 
@@ -674,7 +674,7 @@ section {
 }
 
 .features .icon-box:hover a {
-  color: #e43c5c;
+  color: #1563b1;
 }
 
 /*--------------------------------------------------------------
@@ -713,8 +713,8 @@ section {
 }
 
 .cta .cta-btn:hover {
-  background: #e43c5c;
-  border: 2px solid #e43c5c;
+  background: #1563b1;
+  border: 2px solid #1563b1;
 }
 
 @media (min-width: 1024px) {
@@ -751,7 +751,7 @@ section {
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
   color: #fff;
-  background: #e43c5c;
+  background: #1563b1;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -777,7 +777,7 @@ section {
   bottom: -50px;
   z-index: 3;
   transition: all ease-in-out 0.3s;
-  background: #e43c5c;
+  background: #1563b1;
   padding: 15px 20px;
 }
 
@@ -805,7 +805,7 @@ section {
 
 .portfolio .portfolio-item .portfolio-info .preview-link:hover,
 .portfolio .portfolio-item .portfolio-info .details-link:hover {
-  color: #f7c2cc;
+  color: #bdace9;
 }
 
 .portfolio .portfolio-item .portfolio-info .details-link {
@@ -845,14 +845,14 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #e43c5c;
+  border: 1px solid #1563b1;
 }
 
 .portfolio-details
   .portfolio-details-slider
   .swiper-pagination
   .swiper-pagination-bullet-active {
-  background-color: #e43c5c;
+  background-color: #1563b1;
 }
 
 .portfolio-details .portfolio-info {
@@ -916,7 +916,7 @@ section {
 
 .pricing .box h4 {
   font-size: 42px;
-  color: #e43c5c;
+  color: #1563b1;
   font-weight: 500;
   font-family: "Open Sans", sans-serif;
   margin-bottom: 20px;
@@ -948,7 +948,7 @@ section {
 }
 
 .pricing .box ul i {
-  color: #e43c5c;
+  color: #1563b1;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -967,8 +967,8 @@ section {
   display: inline-block;
   padding: 8px 40px 10px 40px;
   border-radius: 50px;
-  border: 2px solid #e43c5c;
-  color: #e43c5c;
+  border: 2px solid #1563b1;
+  color: #1563b1;
   font-size: 14px;
   font-weight: 400;
   font-family: "Nunito", sans-serif;
@@ -977,22 +977,22 @@ section {
 }
 
 .pricing .box .btn-buy:hover {
-  background: #e43c5c;
+  background: #1563b1;
   color: #fff;
 }
 
 .pricing .recommended {
-  border-color: #e43c5c;
+  border-color: #1563b1;
 }
 
 .pricing .recommended .btn-buy {
-  background: #e43c5c;
+  background: #1563b1;
   color: #fff;
 }
 
 .pricing .recommended .btn-buy:hover {
-  background: #d91e42;
-  border-color: #d91e42;
+  background: #8c8c8c;
+  border-color: #8c8c8c;
 }
 
 .pricing .recommended-badge {
@@ -1004,7 +1004,7 @@ section {
   font-size: 13px;
   padding: 3px 25px 6px 25px;
   background: #fce6ea;
-  color: #e43c5c;
+  color: #1563b1;
   border-radius: 50px;
 }
 
@@ -1029,13 +1029,13 @@ section {
 .faq .faq-list .question {
   display: block;
   position: relative;
-  font-family: #e43c5c;
+  font-family: #1563b1;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
   padding-left: 25px;
   cursor: pointer;
-  color: #d01d3f;
+  color: #8c8c8c;
   transition: 0.3s;
 }
 
@@ -1060,7 +1060,7 @@ section {
 }
 
 .faq .faq-list .collapsed:hover {
-  color: #e43c5c;
+  color: #1563b1;
 }
 
 .faq .faq-list .collapsed .icon-show {
@@ -1129,7 +1129,7 @@ section {
 }
 
 .team .member .social a:hover {
-  color: #e43c5c;
+  color: #1563b1;
 }
 
 .team .member .social i {
@@ -1176,11 +1176,11 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #e43c5c;
+  color: #1563b1;
   float: left;
   width: 44px;
   height: 44px;
-  background: #fdeff2;
+  background: #d0e2fe;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1211,7 +1211,7 @@ section {
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #e43c5c;
+  background: #1563b1;
   color: #fff;
 }
 
@@ -1227,7 +1227,7 @@ section {
 .contact .php-email-form .error-message {
   display: none;
   color: #fff;
-  background: #ed3c0d;
+  background: #8c8c8c;
   text-align: left;
   padding: 15px;
   font-weight: 600;
@@ -1275,7 +1275,7 @@ section {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #e43c5c;
+  border-color: #1563b1;
 }
 
 .contact .php-email-form input {
@@ -1287,7 +1287,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #e43c5c;
+  background: #1563b1;
   border: 0;
   padding: 10px 28px;
   color: #fff;
@@ -1296,7 +1296,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: #d01d3f;
+  background: #8c8c8c;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1389,7 +1389,7 @@ section {
 }
 
 .blog .entry .entry-title a:hover {
-  color: #e43c5c;
+  color: #1563b1;
 }
 
 .blog .entry .entry-meta {
@@ -1434,7 +1434,7 @@ section {
 
 .blog .entry .entry-content .read-more a {
   display: inline-block;
-  background: #e43c5c;
+  background: #1563b1;
   color: #fff;
   padding: 6px 20px;
   transition: 0.3s;
@@ -1443,7 +1443,7 @@ section {
 }
 
 .blog .entry .entry-content .read-more a:hover {
-  background: #e7526f;
+  background: #8c8c8c;
 }
 
 .blog .entry .entry-content h3 {
@@ -1498,7 +1498,7 @@ section {
 }
 
 .blog .entry .entry-footer a:hover {
-  color: #e43c5c;
+  color: #1563b1;
 }
 
 .blog .entry .entry-footer .cats {
@@ -1607,7 +1607,7 @@ section {
 }
 
 .blog .blog-comments .comment h5 a:hover {
-  color: #e43c5c;
+  color: #1563b1;
 }
 
 .blog .blog-comments .comment h5 .reply {
@@ -1708,7 +1708,7 @@ section {
 
 .blog .blog-pagination li.active,
 .blog .blog-pagination li:hover {
-  background: #e43c5c;
+  background: #1563b1;
 }
 
 .blog .blog-pagination li.active a,
@@ -1759,7 +1759,7 @@ section {
   font-size: 16px;
   padding: 0 15px;
   margin: -1px;
-  background: #e43c5c;
+  background: #1563b1;
   color: #fff;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
@@ -1771,7 +1771,7 @@ section {
 }
 
 .blog .sidebar .search-form form button:hover {
-  background: #e64e6b;
+  background: #8c8c8c;
 }
 
 .blog .sidebar .categories ul {
@@ -1789,7 +1789,7 @@ section {
 }
 
 .blog .sidebar .categories ul a:hover {
-  color: #e43c5c;
+  color: #1563b1;
 }
 
 .blog .sidebar .categories ul a span {
@@ -1819,7 +1819,7 @@ section {
 }
 
 .blog .sidebar .recent-posts h4 a:hover {
-  color: #e43c5c;
+  color: #1563b1;
 }
 
 .blog .sidebar .recent-posts time {
@@ -1855,8 +1855,8 @@ section {
 
 .blog .sidebar .tags ul a:hover {
   color: #fff;
-  border: 1px solid #e43c5c;
-  background: #e43c5c;
+  border: 1px solid #1563b1;
+  background: #1563b1;
 }
 
 .blog .sidebar .tags ul a span {
@@ -1920,7 +1920,7 @@ section {
 
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #ea6981;
+  color: #8c8c8c;
   font-size: 18px;
   line-height: 1;
 }
@@ -1944,7 +1944,7 @@ section {
 
 #footer .footer-top .footer-links ul a:hover {
   text-decoration: none;
-  color: #e43c5c;
+  color: #1563b1;
 }
 
 #footer .footer-newsletter {
@@ -1966,7 +1966,7 @@ section {
   position: relative;
   border-radius: 50px;
   text-align: left;
-  border: 1px solid #f7c2cc;
+  border: 1px solid #bdace9;
 }
 
 #footer .footer-newsletter form input[type="email"] {
@@ -1984,7 +1984,7 @@ section {
   background: none;
   font-size: 15px;
   padding: 0 22px;
-  background: #e43c5c;
+  background: #1563b1;
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
@@ -1992,7 +1992,7 @@ section {
 }
 
 #footer .footer-newsletter form input[type="submit"]:hover {
-  background: #d01d3f;
+  background: #8c8c8c;
 }
 
 #footer .credits {
@@ -2004,7 +2004,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #e43c5c;
+  background: #1563b1;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -2017,7 +2017,7 @@ section {
 }
 
 #footer .social-links a:hover {
-  background: #d01d3f;
+  background: #8c8c8c;
   color: #fff;
   text-decoration: none;
 }
