--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1199,7 +1199,7 @@ section {
 
 .contact .info h4 {
   padding: 0 0 0 60px;
-  font-size: 22px;
+  font-size: 35px; /* 22 */
   font-weight: 600;
   margin-bottom: 5px;
   color: #493c3e;
