--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -499,6 +499,13 @@ section {
 
 .section-title p {
 	margin: 15px auto 0 auto;
+	font-weight: 400;
+}
+
+.section-title h4 {
+	text-align: center;
+	margin: 40px auto 0 auto;
+	font-size: 20px;
 	font-weight: 600;
 }
 
