--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 a {
-	color: #1563b1; /*before: #1563b1;*/ 
+	color: #1563b1; /*before: #1563b1;*/
 	text-decoration: none;
 }
 
@@ -34,7 +34,40 @@ h6 {
 }
 
 /*------------------------------s--------------------------------
-# consistent button for github 
+# consistent button for dribbble 
+--------------------------------------------------------------*/
+.consistent-buttonD {
+	position: fixed;
+	visibility: visible;
+	opacity: 0;
+	right: 145px;
+	bottom: 15px;
+	z-index: 996;
+	background: #1563b1;
+	width: 35px;
+	height: 35px;
+	border-radius: 50px;
+	transition: all 0.4s;
+}
+
+.consistent-buttonD i {
+	font-size: 28px;
+	color: rgb(255, 255, 255);
+	line-height: 0;
+}
+
+.consistent-buttonD:hover {
+	background: #000000;
+	color: #fff;
+}
+
+.consistent-buttonD.active {
+	visibility: visible;
+	opacity: 1;
+}
+
+/*------------------------------s--------------------------------
+# consistent button for linkedin 
 --------------------------------------------------------------*/
 .consistent-buttonL {
 	position: fixed;
@@ -57,7 +90,7 @@ h6 {
 }
 
 .consistent-buttonL:hover {
-	background: #1b76d1;
+	background: #000000;
 	color: #fff;
 }
 
@@ -90,7 +123,7 @@ h6 {
 }
 
 .consistent-button:hover {
-	background: #1b76d1;
+	background: #000000;
 	color: #fff;
 }
 
@@ -123,7 +156,7 @@ h6 {
 }
 
 .back-to-top:hover {
-	background: #1b76d1;
+	background: #000000;
 	color: #fff;
 }
 
@@ -430,7 +463,7 @@ h6 {
 
 #hero:before {
 	content: "";
-	background: rgba(0, 0, 0, 0.123);
+	background: rgba(0, 0, 0, 0.062);
 	position: absolute;
 	bottom: 0;
 	top: 0;
@@ -463,10 +496,11 @@ h6 {
 }
 
 #hero h1 {
+	font-family: "Nunito", sans-serif;
 	margin: 0 0 10px 0;
 	font-size: 68px;
-	font-weight: 700;
-	line-height: 100px;
+	font-weight: 600;
+	line-height: 110px;
 	text-transform: none;
 	color: #fff;
 }
@@ -537,7 +571,10 @@ section {
 
 .section-contact {
 	text-align: center;
-	padding-bottom: 0px;
+	padding-bottom: 50px;
+	margin: -15px 0 0 0;
+	font-size: 25px;
+	font-weight: 600;
 }
 
 .section-title {
@@ -570,15 +607,16 @@ section {
 }
 
 .section-title p {
-	margin: 15px auto 0 auto;
+	margin: 10px auto 0 auto;
 	font-weight: 400;
 }
 
 .section-title h4 {
+	font-family: "Courier New", monospace;
 	text-align: center;
-	margin: 40px auto 0 auto;
-	font-size: 20px;
-	font-weight: 600;
+	margin: 80px auto 0 auto;
+	font-size: 23px;
+	font-weight: 500;
 }
 
 @media (min-width: 1024px) {
@@ -1964,7 +2002,7 @@ section {
 }
 
 #footer .footer-top {
-	padding: 60px 0 30px 0;
+	padding: 20px 0 30px 0;
 	background: #fff;
 }
 
