--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,22 @@ body {
 }
 
 a {
-	color: #1563b1; /*before: #1563b1;*/
+	color: #ffffff; /*before: #1563b1;*/
 	text-decoration: none;
 }
 
 a:hover {
 	color: #000000; /*before: #1b76d1*/
+	text-decoration: none;
+}
+
+a.class1 {
+	color: #1973cc; /*before: #1563b1;*/
+	text-decoration: none;
+}
+
+a.class1:hover {
+	color: #000000; /*before: #1563b1;*/
 	text-decoration: none;
 }
 
@@ -43,7 +53,7 @@ h6 {
 	right: 145px;
 	bottom: 15px;
 	z-index: 996;
-	background: #1563b1;
+	background: #1973cc;
 	width: 35px;
 	height: 35px;
 	border-radius: 50px;
@@ -76,7 +86,7 @@ h6 {
 	right: 105px;
 	bottom: 15px;
 	z-index: 996;
-	background: #1563b1;
+	background: #1973cc;
 	width: 35px;
 	height: 35px;
 	border-radius: 50px;
@@ -109,7 +119,7 @@ h6 {
 	right: 60px;
 	bottom: 15px;
 	z-index: 996;
-	background: #1563b1;
+	background: #1973cc;
 	width: 35px;
 	height: 35px;
 	border-radius: 50px;
@@ -142,7 +152,7 @@ h6 {
 	right: 15px;
 	bottom: 15px;
 	z-index: 996;
-	background: #1563b1;
+	background: #1973cc;
 	width: 35px;
 	height: 35px;
 	border-radius: 50px;
@@ -254,7 +264,7 @@ h6 {
 	height: 2px;
 	bottom: -6px;
 	left: 0;
-	background-color: #1563b1;
+	background-color: #b1cbdb;
 	visibility: hidden;
 	transform: scaleX(0);
 	transition: all 0.3s ease-in-out 0s;
@@ -307,7 +317,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover > a {
-	color: #1563b1;
+	color: #1973cc;
 }
 
 .navbar .dropdown:hover > ul {
@@ -409,7 +419,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover > a {
-	color: #1563b1;
+	color: #1973cc;
 }
 
 .navbar-mobile .getstarted {
@@ -443,7 +453,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover > a {
-	color: #1563b1;
+	color: #1973cc;
 }
 
 .navbar-mobile .dropdown > .dropdown-active {
@@ -526,8 +536,8 @@ h6 {
 }
 
 #hero .btn-get-started:hover {
-	background: #1563b1;
-	border: 2px solid #1563b1;
+	background: #1973cc;
+	border: 2px solid #1973cc;
 }
 
 @media (min-width: 1024px) {
@@ -571,7 +581,7 @@ section {
 
 .section-contact {
 	text-align: center;
-	padding-bottom: 50px;
+	padding-bottom: 60px;
 	margin: -15px 0 0 0;
 	font-size: 25px;
 	font-weight: 600;
@@ -590,7 +600,7 @@ section {
 	line-height: 1;
 	margin: 0;
 	background: #d0e2fe;
-	color: #1563b1;
+	color: #1973cc;
 	display: inline-block;
 	text-transform: uppercase;
 	border-radius: 50px;
@@ -603,7 +613,7 @@ section {
 }
 
 .section-title h3 span {
-	color: #1563b1;
+	color: #1973cc;
 }
 
 .section-title p {
@@ -612,11 +622,12 @@ section {
 }
 
 .section-title h4 {
+	color: #1973cc;
 	font-family: "Courier New", monospace;
 	text-align: center;
-	margin: 80px auto 0 auto;
+	margin: 90px auto 0 auto;
 	font-size: 23px;
-	font-weight: 500;
+	font-weight: 600;
 }
 
 @media (min-width: 1024px) {
@@ -652,7 +663,7 @@ section {
 	left: 0;
 	top: 2px;
 	font-size: 20px;
-	color: #1563b1;
+	color: #1973cc;
 	line-height: 1;
 }
 
@@ -670,15 +681,15 @@ section {
 	border-radius: 50px;
 	transition: 0.3s;
 	line-height: 1;
-	color: #1563b1;
+	color: #1973cc;
 	-webkit-animation-delay: 0.8s;
 	animation-delay: 0.8s;
 	margin-top: 6px;
-	border: 2px solid #1563b1;
+	border: 2px solid #1973cc;
 }
 
 .about .content .btn-learn-more:hover {
-	background: #1563b1;
+	background: #1973cc;
 	color: #fff;
 	text-decoration: none;
 }
@@ -715,7 +726,7 @@ section {
 }
 
 .services .icon-box:hover::before {
-	background: #1563b1;
+	background: #1973cc;
 	top: 0;
 	border-radius: 0px;
 }
@@ -727,7 +738,7 @@ section {
 .services .icon i {
 	font-size: 48px;
 	line-height: 1;
-	color: #1563b1;
+	color: #1973cc;
 	transition: all 0.3s ease-in-out;
 }
 
@@ -791,7 +802,7 @@ section {
 }
 
 .features .icon-box:hover a {
-	color: #1563b1;
+	color: #1973cc;
 }
 
 /*--------------------------------------------------------------
@@ -830,8 +841,8 @@ section {
 }
 
 .cta .cta-btn:hover {
-	background: #1563b1;
-	border: 2px solid #1563b1;
+	background: #1973cc;
+	border: 2px solid #1973cc;
 }
 
 @media (min-width: 1024px) {
@@ -868,7 +879,7 @@ section {
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
 	color: #fff;
-	background: #1563b1;
+	background: #1973cc;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -894,7 +905,7 @@ section {
 	bottom: -50px;
 	z-index: 3;
 	transition: all ease-in-out 0.3s;
-	background: #1563b1;
+	background: #000000b7;
 	padding: 15px 20px;
 }
 
@@ -922,7 +933,7 @@ section {
 
 .portfolio .portfolio-item .portfolio-info .preview-link:hover,
 .portfolio .portfolio-item .portfolio-info .details-link:hover {
-	color: #bdace9;
+	color: #000000; /*before: #bdace9*/
 }
 
 .portfolio .portfolio-item .portfolio-info .details-link {
