--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -493,7 +493,7 @@ h6 {
 	align-items: center; /* before: left*/
 	flex-direction: column;
 	text-align: center; /* before: left*/
-	padding: 0 15px;
+	padding: 0 10px;
 }
 
 #hero h3 {
@@ -508,7 +508,7 @@ h6 {
 #hero h1 {
 	font-family: "Nunito", sans-serif;
 	margin: 0 0 10px 0;
-	margin-bottom: 30px;
+	margin-bottom: 20px;
 	font-size: 68px;
 	font-weight: 600;
 	line-height: 110px;
@@ -518,7 +518,8 @@ h6 {
 
 #hero h2 {
 	color: #eee;
-	margin-bottom: 20px;
+	margin: 0 0 10px 0;
+	margin-bottom: 10px;
 	font-size: 20px;
 }
 
@@ -888,11 +889,15 @@ section {
 }
 
 .portfolio .portfolio-item {
+	margin-left: auto; /*IRENE MAKE SURE TO CHANGE THIS BACK TO AUTO ONCE U ADD 2ND CASE STUDY. before: auto*/
+	margin-right: auto;
 	margin-bottom: 30px;
 	overflow: hidden;
 }
 
 .portfolio .portfolio-item img {
+	margin-left: auto;
+	margin-right: auto;
 	position: relative;
 	top: 0;
 	transition: all 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -927,7 +932,7 @@ section {
 	position: absolute;
 	right: 50px;
 	font-size: 24px;
-	top: calc(50% - 40px); /*before: 50% - 18px */ 
+	top: calc(50% - 40px); /*before: 50% - 18px */
 	color: white;
 	transition: ease-in-out 0.3s;
 }
@@ -1500,6 +1505,8 @@ section {
 --------------------------------------------------------------*/
 .blog {
 	padding: 40px 0 20px 0;
+	margin-left: auto;
+	margin-right: -400px;
 }
 
 .blog .entry {
@@ -1563,6 +1570,7 @@ section {
 
 .blog .entry .entry-content p {
 	line-height: 24px;
+	font-size: 18px; /* originally 16px*/
 }
 
 .blog .entry .entry-content .read-more {
