--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1533,7 +1533,7 @@ section {
 	text-align: left;
 	line-height: 23px;
 	font-size: 15px;
-	font-weight: bold;
+	font-weight: none;
 	padding: 0;
 	margin: 0 0 50px 0;
 	color: #000000;
