moved portfolio section up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -583,9 +583,9 @@ section {
 
 .section-contact {
 	text-align: center;
-	padding-bottom: 60px;
-	margin: -15px 0 0 0;
-	font-size: 25px;
+	padding-bottom: 0px;
+	margin: 0px 0px 0 580px;
+	font-size: 30px;
 	font-weight: 600;
 }
 
