--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,13 +44,13 @@ h6 {
 }
 
 /*------------------------------s--------------------------------
-# consistent button for dribbble 
+# consistent button for linkedin 
 --------------------------------------------------------------*/
 .consistent-buttonD {
 	position: fixed;
 	visibility: visible;
 	opacity: 0;
-	right: 145px;
+	right: 150px;
 	bottom: 15px;
 	z-index: 996;
 	background: #1973cc;
@@ -61,7 +61,7 @@ h6 {
 }
 
 .consistent-buttonD i {
-	font-size: 28px;
+	font-size: 20px;
 	color: rgb(255, 255, 255);
 	line-height: 0;
 }
@@ -77,7 +77,7 @@ h6 {
 }
 
 /*------------------------------s--------------------------------
-# consistent button for linkedin 
+# consistent button for github 
 --------------------------------------------------------------*/
 .consistent-buttonL {
 	position: fixed;
@@ -94,7 +94,7 @@ h6 {
 }
 
 .consistent-buttonL i {
-	font-size: 20px;
+	font-size: 28px;
 	color: rgb(255, 255, 255);
 	line-height: 0;
 }
@@ -110,7 +110,7 @@ h6 {
 }
 
 /*------------------------------s--------------------------------
-# consistent button for github 
+# consistent button for dribbble 
 --------------------------------------------------------------*/
 .consistent-button {
 	position: fixed;
@@ -583,10 +583,13 @@ section {
 
 .section-contact {
 	text-align: center;
-	padding-bottom: 0px;
-	margin: 0px 0px 0 580px;
+	padding-bottom: 10px;
+	padding-top: 10px;
+	margin: 0px 0px 0px 0px;
 	font-size: 30px;
 	font-weight: 600;
+	top: 50%;
+	left: 50%;
 }
 
 .section-title {
