--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,8 @@
 --------------------------------------------------------------*/
 body {
 	/* font-family: "Open Sans", sans-serif; */
-	font-family: "Roboto";
+	/* font-family: "Roboto"; */
+	font-family: "Inter", sans-serif;
 	color: #000000;
 }
 
@@ -40,7 +41,8 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: "Nunito", sans-serif;
+	/* font-family: "Nunito", sans-serif; */
+	font-family: "Inter", sans-serif;
 }
 
 /*------------------------------s--------------------------------
@@ -240,7 +242,8 @@ h6 {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	font-family: "Poppins", sans-serif;
+	/* font-family: "Poppins", sans-serif; */
+	font-family: "Inter", sans-serif;
 	color: #fff;
 	font-size: 15px;
 	padding: 0 4px;
@@ -506,11 +509,12 @@ h6 {
 }
 
 #hero h1 {
-	font-family: "Nunito", sans-serif;
+	/* font-family: "Nunito", sans-serif; */
+	font-family: "Inter", sans-serif;
 	margin: 0 0 10px 0;
 	margin-bottom: 20px;
 	font-size: 68px;
-	font-weight: 600;
+	font-weight: bold !important;
 	line-height: 110px;
 	text-transform: none;
 	color: #fff;
@@ -524,7 +528,8 @@ h6 {
 }
 
 #hero .btn-get-started {
-	font-family: "Poppins", sans-serif;
+	/* font-family: "Poppins", sans-serif; */
+	font-family: "Inter", sans-serif;
 	text-transform: uppercase;
 	font-weight: 400;
 	font-size: 13px;
@@ -584,9 +589,19 @@ section {
 .section-contact {
 	text-align: center;
 	padding-bottom: 10px;
-	padding-top: 10px;
+	padding-top: 50px;
 	margin: 0px 0px 0px 0px;
-	font-size: 30px;
+	font-size: 25px;
+	font-weight: 600;
+	top: 50%;
+	left: 50%;
+}
+.section-contact-port {
+	text-align: center;
+	padding-bottom: 10px;
+	padding-top: 0px;
+	margin: 0px 0px 0px 0px;
+	font-size: 25px;
 	font-weight: 600;
 	top: 50%;
 	left: 50%;
@@ -628,7 +643,8 @@ section {
 
 .section-title h4 {
 	color: #1973cc;
-	font-family: "Courier New", monospace;
+	/* font-family: "Courier New", monospace; */
+	font-family: "Inter", sans-serif;
 	text-align: center;
 	margin: 90px auto 0 auto;
 	font-size: 23px;
@@ -677,7 +693,8 @@ section {
 }
 
 .about .content .btn-learn-more {
-	font-family: "Nunito", sans-serif;
+	/* font-family: "Nunito", sans-serif; */
+	font-family: "Inter", sans-serif;
 	font-weight: 600;
 	font-size: 14px;
 	letter-spacing: 1px;
@@ -831,7 +848,8 @@ section {
 }
 
 .cta .cta-btn {
-	font-family: "Nunito", sans-serif;
+	/* font-family: "Nunito", sans-serif; */
+	font-family: "Inter", sans-serif;
 	text-transform: uppercase;
 	font-weight: 500;
 	font-size: 16px;
@@ -889,6 +907,13 @@ section {
 
 .portfolio #portfolio-flters li:last-child {
 	margin-right: 0;
+}
+
+/* caption below for each portfolio */
+.portfolio .img-with-text {
+	text-align: center;
+	margin-top: 10px;
+	font-weight: bold;
 }
 
 .portfolio .portfolio-item {
@@ -972,7 +997,7 @@ section {
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination {
-	margin-top: 20px;
+	margin-top: 0px;
 	position: relative;
 }
 
@@ -1057,7 +1082,8 @@ section {
 	font-size: 42px;
 	color: #1563b1;
 	font-weight: 500;
-	font-family: "Open Sans", sans-serif;
+	/* font-family: "Open Sans", sans-serif; */
+	font-family: "Inter", sans-serif;
 	margin-bottom: 20px;
 }
 
@@ -1110,7 +1136,8 @@ section {
 	color: #1563b1;
 	font-size: 14px;
 	font-weight: 400;
-	font-family: "Nunito", sans-serif;
+	/* font-family: "Nunito", sans-serif; */
+	font-family: "Inter", sans-serif;
 	font-weight: 600;
 	transition: 0.3s;
 }
@@ -1532,7 +1559,8 @@ section {
 	font-weight: bold;
 	padding: 0;
 	margin: 0 0 10px 0;
-	font-family: "Times New Roman", Times, serif;
+	/* font-family: "Times New Roman", Times, serif; */
+	font-family: "Inter", sans-serif;
 }
 
 .blog .entry .entry-heada2 {
@@ -1543,7 +1571,8 @@ section {
 	padding: 0;
 	margin: 0 0 50px 0;
 	color: #000000;
-	font-family: Arial, Helvetica, sans-serif;
+	/* font-family: Arial, Helvetica, sans-serif; */
+	font-family: "Inter", sans-serif;
 }
 
 .blog .entry .entry-title {
@@ -2067,7 +2096,8 @@ section {
 	font-size: 14px;
 	line-height: 24px;
 	margin-bottom: 0;
-	font-family: "Nunito", sans-serif;
+	/* font-family: "Nunito", sans-serif; */
+	font-family: "Inter", sans-serif;
 	color: #777777;
 }
 
