--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,12 +26,12 @@ a:hover {
 }
 
 a.class1 {
-	color: #1973cc; /*before: #1563b1;*/
+	color: #000000; /* before: 1973cc // beforebefore: #1563b1;*/
 	text-decoration: none;
 }
 
 a.class1:hover {
-	color: #000000; /*before: #1563b1;*/
+	color: #444444; /* before: 000000 // beforebefore: #1563b1;*/
 	text-decoration: none;
 }
 
@@ -193,7 +193,7 @@ h6 {
 	line-height: 1;
 	font-weight: 600;
 	letter-spacing: 1px;
-	text-transform: uppercase;
+	text-transform: None;
 }
 
 #header .logo a {
@@ -206,7 +206,7 @@ h6 {
 
 #header.header-scrolled,
 #header.header-inner-pages {
-	background: rgba(0, 0, 0, 0.9);
+	background: rgba(0, 0, 0, 0.9); /* for that weird bar at the top*/
 	padding: 12px 0;
 }
 
@@ -469,7 +469,9 @@ h6 {
 #hero {
 	width: 100%;
 	height: 100vh;
-	background: url("../img/hero-bg.jpg") top center;
+	/* this is to add a gradient or darker opacity to background image */
+	background: linear-gradient(rgba(0.02, 2, 2, 0.3), rgba(0, 0, 0, 0)),
+		url("../img/hero-bg.jpg") top center;
 	background-size: cover;
 	position: relative;
 }
@@ -628,7 +630,7 @@ section {
 
 .section-title h3 {
 	margin: 15px 0 0 0;
-	font-size: 32px;
+	font-size: 23px;
 	font-weight: 700;
 }
 
