--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,7 +181,7 @@ h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
-	transition: all 0.5s;
+	transition: all 1.4s;
 	z-index: 997;
 	padding: 20px 0;
 }
@@ -207,8 +207,9 @@ h6 {
 /* for that weird bar at the top*/
 #header.header-scrolled,
 #header.header-inner-pages {
-	background: rgba(57, 79, 121, 0.322);
-	/* background: #1973cc46; */
+	background: rgba(57, 79, 121, 0.452);
+	/* background: #1973cc46; 
+	background: rgba(57, 79, 121, 0.322); */
 	padding: 12px 0;
 }
 
