--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -936,6 +936,58 @@ section {
 	font-weight: bold;
 }
 
+/* start */
+.portfolio .image {
+	position: relative;
+}
+
+.portfolio .image_img {
+	display: block;
+	width: 100%;
+}
+
+.portfolio .image_overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.336);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	opacity: 0;
+}
+
+.portfolio .image_overlay > * {
+	transform: translateY(20px);
+	transition: transform 0.3s;
+}
+
+.portfolio .image_overlay:hover {
+	opacity: 1;
+}
+
+.portfolio .image_overlay:hover > * {
+	transform: translateY(0);
+}
+
+.portfolio .image_title {
+	font-size: 1.5em;
+	font-weight: bold;
+	color: #ffffff;
+	margin-top: 25px;
+}
+
+.portfolio .image_description {
+	font-size: 0.9em;
+	margin-top: 0.25em;
+	color: #ffffff9f;
+}
+
+/* end */
+
 .portfolio .portfolio-item {
 	margin-left: auto; /*IRENE MAKE SURE TO CHANGE THIS BACK TO AUTO ONCE U ADD 2ND CASE STUDY. before: auto*/
 	margin-right: auto;
@@ -948,7 +1000,7 @@ section {
 	margin-right: auto;
 	position: relative;
 	top: 0;
-	transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1); /* hover transition */
+	/* transition: all 0.2s cubic-bezier(0.645, 0.045, 0.355, 1); /* hover transition when you toggle mouse over portfolio img */
 }
 
 .portfolio .portfolio-item .portfolio-info {
@@ -987,7 +1039,7 @@ section {
 
 .portfolio .portfolio-item .portfolio-info .preview-link:hover,
 .portfolio .portfolio-item .portfolio-info .details-link:hover {
-	color: #ffffff; /*before: #bdace9*/
+	color: #ffffff; /*before: #bdace9
 }
 
 .portfolio .portfolio-item .portfolio-info .details-link {
@@ -995,10 +1047,10 @@ section {
 }
 
 /* this is for any effects when hovering over portfolio img */
-.portfolio .portfolio-item:hover img {
-	/* top: -30px; */
+/* .portfolio .portfolio-item:hover img {
+	/* top: -30px; 
 	opacity: 0.9;
-}
+} */
 
 .portfolio .portfolio-item:hover .portfolio-info {
 	opacity: 1;
