--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -952,7 +952,7 @@ section {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.336);
+	background: rgba(0, 0, 0, 0.555);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -983,7 +983,7 @@ section {
 .portfolio .image_description {
 	font-size: 0.9em;
 	margin-top: 0.25em;
-	color: #ffffff9f;
+	color: #ffffffb2;
 }
 
 /* end */
@@ -1039,7 +1039,7 @@ section {
 
 .portfolio .portfolio-item .portfolio-info .preview-link:hover,
 .portfolio .portfolio-item .portfolio-info .details-link:hover {
-	color: #ffffff; /*before: #bdace9
+	color: #ffffff; /*before: #bdace9 */
 }
 
 .portfolio .portfolio-item .portfolio-info .details-link {
