--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -949,10 +949,10 @@ section {
 .portfolio .image_overlay {
 	position: absolute;
 	top: 0;
-	left: 0;
+	left: 0%;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.555);
+	background: rgba(0, 0, 0, 0.404);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -961,7 +961,7 @@ section {
 }
 
 .portfolio .image_overlay > * {
-	transform: translateY(20px);
+	transform: translateY(8px);
 	transition: transform 0.3s;
 }
 
@@ -981,8 +981,7 @@ section {
 }
 
 .portfolio .image_description {
-	font-size: 0.9em;
-	margin-top: 0.25em;
+	font-size: 1em;
 	color: #ffffffb2;
 }
 
