--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ a.class1 {
 	/* twitter, instagram, linkedin links at bottom */
 	color: #4e4e4e; /* before: 1973cc // beforebefore: #1563b1;*/
 	text-decoration: none;
-	letter-spacing: 2px;
+	letter-spacing: 5px;
 }
 
 a.class1:hover {
@@ -549,7 +549,7 @@ h6 {
 	margin-top: 170px;
 	margin-bottom: 20px;
 	font-size: 40px;
-	font-weight: 500;
+	font-weight: bold;
 	line-height: 45px;
 	letter-spacing: 2px;
 	text-transform: none;
@@ -709,7 +709,7 @@ section {
 }
 .about-title {
 	font-family: "Merriweather", sans-serif;
-	font-size: 40px;
+	font-size: 35px;
 	font-weight: bold;
 	margin-bottom: 25px;
 	margin-left: auto;
@@ -735,7 +735,7 @@ section {
 	margin-right: auto;
 	width: 100%;
 	font-size: 18px;
-	line-height: 180%;
+	line-height: 200%;
 	padding-bottom: 15px;
 }
 
