added instagram pics to about me

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -707,6 +707,12 @@ section {
 	margin-right: auto;
 	width: 960px;
 }
+
+.about-container {
+	width: 85%;
+	margin: auto;
+}
+
 .about-title {
 	font-family: "Merriweather", sans-serif;
 	font-size: 35px;
@@ -799,6 +805,38 @@ section {
 	background: #1973cc;
 	color: #fff;
 	text-decoration: none;
+}
+
+/* Instagram pictures */
+.instagram-container {
+	width: 100%;
+	margin: auto;
+}
+
+.instagram-title {
+	font-family: "Merriweather", sans-serif;
+	font-size: 20px;
+	font-weight: bold;
+	margin-top: 30px;
+	margin-bottom: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	width: 100%;
+	color: #1563b1;
+}
+
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+	float: center;
+	width: 20%;
+	padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+	content: "";
+	clear: both;
+	display: table;
 }
 
 /*--------------------------------------------------------------
