--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -812,6 +812,7 @@ section {
 --------------------------------------------------------------*/
 .instagram-container {
 	width: 100%;
+	height: 100%;
 	margin: auto;
 	margin-bottom: 40px;
 }
